# wos

./: Home.json  README.md  World.Heal1.json  convert_textarea_to_percent.py  coordinate_conversion_reference.py  pyproject.toml  requirements.txt.3.10  test_coords.py
Main/: main.py  task_menu.py
cmd_program/: screen_action.py
config/: account.json  ui_config.json
core/: change_account.py  change_player.py  coord_utils.py  core.py  exploration.py  fsm.py  gather.py  main.py  ocr.py  ocr.py.backup  recalibrate.py  simple_ocr.py
db/: ChiefProfile.Settings.Account.json  ChiefProfile.Settings.GiftCode.json  ChiefProfile.Settings.json  ChiefProfile.json  Home.Alliance.Chests.json  Home.Alliance.Help.json  Home.Alliance.War.AutoJoin.json  Home.Alliance.War.json  Home.Alliance.json  Home.ChiefOrder.UrgentMobilization.json  Home.ChiefOrder.json  Home.Exploration.Explore.Fight.Defeat.json  Home.Exploration.Explore.Fight.Pause.json  Home.Exploration.Explore.Fight.json  Home.Exploration.Explore.json  Home.Exploration.json  Home.Heroes.json  Home.Mail.json  Home.json  World.Intel  World.json  account.json  completion_log.txt
db/players/: example.json
references/TextArea/: ChiefProfile.Settings.json  ChiefProfile.json  Global.SIdePanel.json  roi.json  (+32 more)
test/: ocr-2.8.0.py  save_coord.py  scrcpy_capture.py  screen_capture.py  test.py  test2.py  test3.py
usecases/: alliance.py  arena.py  bear_trap.py  chief_order.py  collect.py  exploration.py  gather.py  heal.py  hunting.py  intel.py  labrynth.py  labyrinth.py  mail.py  pet.py  sunfire_castle.py  training_troops.py  vip.py
(+1 files in other folders)
